# hprd

./: .gitignore  .swp  README  README.md  config.sh  meson.build  meson_options.txt  run_client.sh  run_python_client.sh  run_server.sh  run_test.sh  test_encodec.sh
debian/: README.Debian  README.source  add_git_log.sh  changelog  control  hprd-client.desktop  hprd-client.install  hprd-server.install  hprd-server.service  hprd.cron.d.ex  hprd.doc-base.EX  hprd_client  hprd_server  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  watch.ex
src/: buffer.c  capture_dev.c  client.c  decodec.c  display_dev.c  encodec.c  fb_convert.c  input_dev.c  ld_help.c  meson.build  meson_options.txt  mini_ring_queue.c  module.c  output_dev.c  server.c  tcp_client.c  tcp_server.c  udp_client.c  udp_server.c  util.c
src/capture_dev/: meson.build  xcb_capture.c
src/client/: main.py
src/clients/pyqt/: MainWindow.py  PlatformRes.py  RenderWidget.py  main.py  meson.build  pyqt_proxy.c  pyqt_proxy.py  util.py
src/codec/: decodec.c  encodec.c  ffmpeg_dec.c  ffmpeg_enc.c  ffmpeg_swscale.c  ffmpeg_util.c  meson.build  openh264_dec.c  openh264_enc.c
src/codec/ffmpeg/: ffmpeg_dec.c  ffmpeg_enc.c  ffmpeg_util.h  meson.build
src/codec/libx264/: libx264_enc.c  meson.build
src/codec/libx265/: libx265_enc.c  meson.build
src/codec/vaapi/: meson.build  va_display.c  va_display_drm.c  vaapi_hevc_encodec.c
src/common/: buffer_pool.c  buffer_util.c  drm_allocator.c  frame_buffer.c  input_event.c  meson.build  net_help.c  protocol_client.c  protocol_server.c  queue.c  util.c
src/display_dev/: meson.build  sdl_display.c  wayland_renderer.c  x11_renderer.c
src/display_dev/opengl/: gl_help.c  gl_help.h  gl_render.c  gl_render.h  meson.build  nv12_render.c  rgb888_render.c  yuv420_render.c
src/fb_convert/: fb_convert.c  meson.build
src/fb_convert/libswscale/: libswscale.c  meson.build
src/fb_in/: fb_in.c  meson.build  x11_extensions_in.c
src/fb_in/linux/: meson.build  meson_options.txt  x11_extensions_in.c
src/fb_out/: fb_out.c  meson.build
src/fb_out/linux/: meson.build  sdl_fb_out.c
src/frame_buffer_input/: meson.build  x11_extensions_input.c
src/frame_convert/: frame_convert.c  meson.build
src/frame_convert/libswscale/: libswscale.c  meson.build
src/include/: allocator.h  buffer.h  buffer_pool.h  buffer_util.h  capture_dev.h  codec.h  common.h  decodec.h  dev.h  dev_templete.h  display_dev.h  dl_help.h  encodec.h  fb_convert.h  fb_in.h  fb_out.h  frame_buffer.h  frame_buffer_input.h  frame_convert.h  input_dev.h  input_event.h  ld_help.h  list.h  mini_ring_queue.h  module.h  net_help.h  output_dev.h  protocol.h  queue.h  tcp_client.h  tcp_server.h  util.h
src/include/codec/: encodec.h
src/include/fb_in/: fb_in.h
src/include/fb_out/: fb_out.h
src/include/net/: isleep.h  kcp_client.h  kcp_server.h  net_client.h  net_server.h  net_util.h  tcp_client.h  tcp_server.h
src/input_dev/: meson.build  xcb_input.c  xlib_input.c
src/libs/: buffer_pool.c
src/net/: isleep.c  kcp_client.c  kcp_server.c  meson.build  net_client.c  net_help.c  net_server.c  net_util.c  rt_net_piple.h  server_net.c  server_net.h  server_socket.c  server_socket.h  tcp_client.c  tcp_server.c  udp_client.c  udp_server.c  util.c
src/net/RTNP/: rtnp_core.c  rtnp_core.h
src/net/kcp/: ikcp.c
src/net/rt_net_piple/: rt_net_piple.c  rt_net_piple.h  rt_net_piple_recv.c  rt_net_socket.c  rt_net_socket.h  rt_net_tcp_client.c
src/net/test/: client.c  server.c
src/output_dev/: meson.build  sdl_output.c
src/output_dev/sdl_output/: sdl_output.c
src/platform/: meson.build
src/platform/linux/client/: client.c  main_link.lds  meson.build
src/server/: main.c  main_link.lds  meson.build
src/server_tests/: encodec_test.c  meson.build
src2/: decodec.c  dl_help.c  encodec.c  input_dev.c  meson.build  output_dev.c  server.c  xcb_input.c
src2/codec/: encodec.c  meson.build
src2/codec/ffmpeg/: ffmpeg_dec.c  ffmpeg_enc.c  ffmpeg_util.c  ffmpeg_util.h  meson.build
src2/codec/libx264/: libx264_enc.c  meson.build  openh264_dec.c
src2/codec/libx265/: libx265_enc.c
src2/codec/vaapi/: va_display.c  vaapi_hevc_encodec.c
src2/include/: common.h  decodec.h  dev_templete.h  encodec.h  frame_buffer.h  input_dev.h  output_dev.h  util.h
src2/input_dev/: xcb_input.c
src2/input_dev/xcb_input/: meson.build  xcb_input.c
src2/libs/: meson.build  queue.c
src2/output_dev/sdl_output/: meson.build  sdl_output.c
test/: blockdpy.c  meson.build  x11_extensions_test.c  xcb_copy_test.c  xcb_shm_test.c
